style.css
.mr-nav {padding: 60px;height: 100vh;position: fixed;z-index: 100;}
svg.mr-logo {fill:white!important;width: 100px;}
svg.mr-rect {fill:transparent;stroke: white; stroke-width: 6;width: 50px;height:50px;overflow: visible;}
svg.mr-rect rect {width: 50px;height: 50px;}
svg.mr-triangle {fill:transparent;stroke: white;stroke-width: 6;width: 53px;height:auto;overflow: visible;}
img.mr-circle.mr-avatar {width: 60px;height: 60px;border: white 6px solid;border-radius: 30px;margin: 30px 0;}


.mr-imgcontainer {
  position: relative;
  width: 100%;
  padding-top: 100%; /* 1:1 Aspect Ratio */
  overflow: hidden;
  margin-bottom: 30px;
}

.mr-imgbox {
  position: absolute;
  top: 0;
  left: -50%;
  bottom: 0;
  right: 0;
  overflow: hidden;
  height: 100%;
  width: auto;
}

